--- a/PeladaEsporteClube/app/src/main/res/layout/activity_register.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="10dp"
+    android:padding="10dp"
+              android:background="@drawable/background_gradient_shape"
     tools:context="com.example.weuller.peladaesporteclube.RegisterActivity">
 
     <ImageView
@@ -32,12 +33,16 @@
                 android:text="Nome: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#FFF"
+                android:textStyle="bold"
                 android:layout_weight="1"/>
 
             <EditText
                 android:id="@+id/register_edtName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#FFF"
+                android:backgroundTint="#FFF"
                 android:layout_weight="20"/>
 
         </LinearLayout>
@@ -52,12 +57,16 @@
                 android:text="E-mail: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#FFF"
+                android:textStyle="bold"
                 android:layout_weight="1"/>
 
             <EditText
                 android:id="@+id/register_edtEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#FFF"
+                android:backgroundTint="#FFF"
                 android:layout_weight="20"
                 android:inputType="textEmailAddress" />
 
@@ -73,12 +82,16 @@
                 android:text="Senha: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#FFF"
+                android:textStyle="bold"
                 android:layout_weight="1"/>
 
             <EditText
                 android:id="@+id/register_edtPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#FFF"
+                android:backgroundTint="#FFF"
                 android:layout_weight="20"
                 android:inputType="textPassword" />
 
@@ -94,12 +107,16 @@
                 android:text="Confirmar Senha: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#FFF"
+                android:textStyle="bold"
                 android:layout_weight="1"/>
 
             <EditText
                 android:id="@+id/register_edtConfirmPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#FFF"
+                android:backgroundTint="#FFF"
                 android:layout_weight="20"
                 android:inputType="textPassword" />
 
@@ -108,7 +125,7 @@
         <Button
             android:id="@+id/register_btnSend"
             android:layout_marginTop="60dp"
-            android:background="#689F38"
+            android:background="@drawable/background_gradient_shape"
             android:text="Enviar"
             android:textColor="#FFFFFF"
             android:layout_width="match_parent"
