--- a/PeladaEsporteClube/app/src/main/res/layout/activity_login.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="10dp"
+    android:padding="10dp"
+              android:background="@drawable/background_gradient_shape"
     tools:context="com.example.weuller.peladaesporteclube.LoginActivity">
 
     <ImageView
@@ -15,9 +16,8 @@
         android:layout_height="match_parent"
         android:layout_weight="8"/>
 
-
     <LinearLayout
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,8 +25,11 @@
 
         <EditText
             android:id="@+id/login_edtEmail"
+            android:backgroundTint="#FFFFFF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
             android:hint="E-mail"
             android:inputType="textEmailAddress" />
 
@@ -34,55 +37,61 @@
             android:id="@+id/login_edtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#FFFFFF"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#FFFFFF"
             android:hint="Senha"
             android:password="true" />
 
         <Button
             android:id="@+id/login_btnSigin"
-            android:layout_marginTop="20dp"
-            android:background="#689F38"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/background_gradient_shape"
             android:text="Entrar"
             android:textColor="#FFFFFF"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:textSize="15sp"
+            android:layout_marginTop="40dp"
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/login_btnRegister"
-            android:layout_marginTop="30dp"
-            android:background="#689F38"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/background_gradient_shape"
             android:text="Cadastre-se"
+            android:textSize="15sp"
+            android:layout_gravity="center_horizontal"
+            android:textStyle="bold"
             android:textColor="#FFFFFF"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <LinearLayout
             android:gravity="center"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/login_btnGoogle"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:layout_weight="1"/>
 
             <com.facebook.login.widget.LoginButton
                 android:id="@+id/login_btnFacebook"
-                android:layout_marginLeft="10dp"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:paddingTop="13dp"
+                android:paddingBottom="13dp"
+                android:layout_gravity="center_vertical"
                 android:layout_height="match_parent"
                 android:layout_weight="1"/>
-
-
         </LinearLayout>
-
     </LinearLayout>
-
 </LinearLayout>
