--- a/PeladaEsporteClube/app/src/main/res/layout/list_item_message.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/list_item_message.xml
@@ -15,7 +15,7 @@
         android:src="@mipmap/defaultuser"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
-        android:layout_marginRight="10dp" />
+        android:layout_marginStart="10dp" />
 
     <LinearLayout
         android:background="#A0D080"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="7dp"
             android:layout_marginTop="10dp"
@@ -37,7 +37,7 @@
             android:text="User Name"/>
 
         <TextView
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="7dp"
             android:layout_marginTop="10dp"
@@ -49,7 +49,7 @@
             android:text="Message"/>
 
         <TextView
-            android:textSize="10dp"
+            android:textSize="10sp"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="7dp"
             android:layout_marginTop="10dp"
