--- a/PeladaEsporteClube/app/src/main/res/layout/fragment_bottom_map.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/fragment_bottom_map.xml
@@ -103,18 +103,85 @@
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/bottom_map_btnVote"
-            android:background="#4087F4"
-            android:textColor="#FFFFFF"
-            android:layout_marginRight="20dp"
+        <!--Textos direita-->
+        <LinearLayout
+            android:id="@+id/bottom_map_lltTime"
             android:layout_weight="1"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="Votar"
+            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"/>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_margin="10dp"
+                android:textColor="#FF0000"
+                android:text="FUTEBOL MARCADO"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <!--Data do futebol-->
+            <LinearLayout
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:text="Data: "
+                    android:textSize="16dp"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/bottom_map_txtDate"
+                    android:text="xx/xx/xxxx"
+                    android:textSize="14dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp" />
+
+            </LinearLayout>
+
+            <!--Hora do futebol-->
+            <LinearLayout
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:text="Hora: "
+                    android:textSize="16dp"
+                    android:textStyle="bold"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/bottom_map_txtTime"
+                    android:text="xx:xx"
+                    android:textSize="14dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <!--<Button-->
+            <!--android:id="@+id/bottom_map_btnVote"-->
+            <!--android:background="#4087F4"-->
+            <!--android:textColor="#FFFFFF"-->
+            <!--android:layout_marginRight="20dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:gravity="center"-->
+            <!--android:text="Votar"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:visibility="invisible"/>-->
 
 
     </LinearLayout>
