--- a/PeladaEsporteClube/app/src/main/res/layout/activity_chat.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_chat.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:orientation="vertical"
-    tools:context="com.example.weuller.peladaesporteclube.ChatActivity">
+    tools:context="com.example.weuller.peladaesporteclube.Activities.ChatActivity">
 
 
     <!--<ListView-->
