--- a/PeladaEsporteClube/app/src/main/res/layout/activity_main.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:orientation="vertical"
-    tools:context="com.example.weuller.peladaesporteclube.MainActivity">
+    tools:context="com.example.weuller.peladaesporteclube.Activities.MainActivity">
 
     <LinearLayout
         android:layout_marginTop="10dp"
