--- a/PeladaEsporteClube/app/src/main/res/layout/activity_map_football_field.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_map_football_field.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.weuller.peladaesporteclube.MapFootballFieldActivity">
+    tools:context="com.example.weuller.peladaesporteclube.Activities.MapFootballFieldActivity">
 
     <LinearLayout
         android:id="@+id/map_football_field_lltMap"
@@ -29,7 +29,7 @@
 
         <fragment
             android:id="@+id/map_football_field_fgmtBottomMap"
-            android:name="com.example.weuller.peladaesporteclube.BottomMapFragment"
+            android:name="com.example.weuller.peladaesporteclube.Fragments.BottomMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:layout="@layout/fragment_bottom_map" />
