--- a/PeladaEsporteClube/app/src/main/res/layout/activity_register.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="10dp"
               android:background="@drawable/background_gradient_shape"
-    tools:context="com.example.weuller.peladaesporteclube.RegisterActivity">
+    tools:context="com.example.weuller.peladaesporteclube.Activities.RegisterActivity">
 
     <ImageView
         android:layout_marginTop="20dp"
