--- a/PeladaEsporteClube/app/src/main/res/layout/fragment_time_picker.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/fragment_time_picker.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.weuller.peladaesporteclube.TimePickerFragment">
+    tools:context="com.example.weuller.peladaesporteclube.Fragments.TimePickerFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
