--- a/PeladaEsporteClube/app/src/main/res/layout/list_item_message.xml
+++ b/PeladaEsporteClube/app/src/main/res/layout/list_item_message.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_margin="10dp"
-    tools:context="com.example.weuller.peladaesporteclube.MessageListItem">
+    tools:context="com.example.weuller.peladaesporteclube.ListItens.MessageListItem">
 
     <ImageView
         android:id="@+id/list_item_message_imgUserImage"
